@@ -15,6 +15,9 @@ Version 1.8.3 patchlevel 13                     ??? ??, 20??
 
 Minor Changes:
  * align() columns can now have ansi color definitions. [GM]
+ 
+Fixes:
+ * Bug in randword() and extract() fixed. [MG]
 
 & 1.8.3p12
 Version 1.8.3 patchlevel 12                     Feb 07, 2010
